# OS_labs

./: .gitignore
AsyncStructures/: CMakeLists.txt  Config.conf  README.md  build.sh  main.cpp  test.hpp
AsyncStructures/sets/: fine_set.hpp  opt_set.hpp  set.hpp
Daemon/: Config.conf  Daemon.cpp  Daemon.hpp  README.md  build.sh  main.cpp
Interprocessor/: CMakeLists.txt  README.md  build.sh  queue.hpp
Interprocessor/Client/: client.cpp  client.hpp
Interprocessor/Connections/: conn_fifo.cpp  conn_mq.cpp  connection.hpp
Interprocessor/Host/: host.cpp  host.hpp
